--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["dev"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "release"]
 
 jobs:
   unittest_coverage:
